--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link rel="Stylesheet" type="text/css" href="style.css">
-<title>Ciekawa strona internetowa</title>
+<title>Zmieniona strona internetowa</title>
 <meta charset="UTF-8">
 </head>
 <body>
